<resources>
    <string name="app_name">CamHi</string>
    <string name="title_camera_fragment">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="return_btn">back</string>
    <string name="click_to_add_camera">Add Camera</string>
    <string name="device_setting">Device Setting</string>
    <string name="name">Name:</string>
    <string name="user_name">UserName:</string>
    <string name="camera">Camera</string>
    <string name="btn_edit">edit</string>
    <string name="admin">admin</string>
    <string name="uid">UID:</string>
    <string name="psw">Password</string>
    <string name="scan">Scan QR Code</string>
    <string name="search_in_lan">Search Camera from LAN</string>
    <string name="one_key_setting">Wireless Installation</string>
    <string name="add_camera">Add Camera</string>
    <string name="finish">done</string>
    <string name="text_scan">put the QR Code into the frame</string>
    <string name="search_camera_result">Search results</string>
    <string name="refresh">Refresh</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="tips_loading">Loading</string>
    <string name="list_txt_uid">UID: </string>
    <string name="tips_null_nike">Camera name cannot be empty.</string>
    <string name="tips_null_uid">UID cannot be empty.</string>
    <string name="tips_null_username">User Name cannot be empty.</string>
    <string name="tips_add_camera_exists">This camera already exists, please enter another one.</string>
    <string name="btn_ok">OK</string>
    <string name="setting">Setting</string>
    <string name="ssid">SSID</string>
    <string name="one_key_setting_wifi">WIFI connect</string>
    <string name="connect_to_WIFI_first">please connect to WIFI first</string>
    <string name="txt_recording">REC...</string>
    <string name="tips_snapshot_success">Snapshot successfully.</string>
    <string name="tips_snapshot_failed">Snapshot was failed.</string>
    <string name="tips_no_sdcard">No SDCard found in your device.</string>
    <string name="resolution_ratio">resolution ratio</string>
    <string name="high_definition">Max</string>
    <string name="fluent">Low</string>
    <string name="btn_ptz_zoomin">Zoom in</string>
    <string name="btn_ptz_zoomout">Zoom out</string>
    <string name="btn_ptz_focusout">Focus out</string>
    <string name="btn_ptz_focusin">Focus in</string>
    <string name="btn_preset_call">Call</string>
    <string name="btn_preset_set">Set</string>
    <string name="tips_preset_set_btn">Default setting success</string>
    <string name="btn_preset_1">1</string>
    <string name="btn_preset_2">2</string>
    <string name="btn_preset_3">3</string>
    <string name="btn_preset_4">4</string>
    <string name="btn_preset_5">5</string>
    <string name="btn_preset_6">6</string>
    <string name="btn_preset_7">7</string>
    <string name="btn_preset_8">8</string>
    <string name="txt_live_flip">Flip</string>
    <string name="txt_live_mirror">Mirror</string>
    <string name="item_modify_password">Edit Password</string>
    <string name="item_alarm_motion_detection">Alarm Setting</string>
    <string name="item_action_with_alarm">Action with Alarm</string>
    <string name="item_timing_video">Timing Record</string>
    <string name="item_audio_setup">Audio Setting</string>
    <string name="item_video_settings">Video Setting</string>
    <string name="item_wifi_settings">Wi-Fi Setting</string>
    <string name="item_sd_card_set">SD Card Setting</string>
    <string name="item_equipment_time_setting">Time Setting</string>
    <string name="item_mailbox_settings">Email Setting</string>
    <string name="item_ftp_settings">FTP Setting</string>
    <string name="item_system_settings">System Setting</string>
    <string name="item_equipment_information">Device Information</string>
    <string name="camera_setup">Camera Setting</string>
    <string name="title_modify_password">Edit Password</string>
    <string name="old_psw">Old:</string>
    <string name="new_psw">New:</string>
    <string name="sure_new_psw">Confirm:</string>
    <string name="tips_password_wrong_contains">password can not contains ~ $ \ \\ = + or space</string>
    <string name="tips_old_password_is_wrong">The old password is wrong.</string>
    <string name="tips_new_passwords_do_not_match">New passwords do not match.</string>
    <string name="use_setting_show_psw">Show password</string>
    <string name="tips_modify_security_code_ok">Successfully modify the password, the camera will be re connected later</string>
    <string name="title_alarm_motion_detection">Alarm Setting</string>
    <string name="open_motion_detection">Motion Detection</string>
    <string name="sensitivity">Level</string>
    <string name="application">Apply</string>
    <string name="title_action_with_alarm">Action with Alarm</string>
    <string name="alarm_push">Alarm Notifications</string>
    <string name="alarm_sd_card_video">Alarm SD REC</string>
    <string name="email_alarm_and_send_pictures">E-mail Alarm with Pictures</string>
    <string name="save_pictures_to_ftp_server">Save pictures to FTP server</string>
    <string name="save_videos_to_ftp_server">Save videos to FTP server</string>
    <string name="take_picture_counts">Picture num</string>
    <string name="title_timing_video">Timing Record</string>
    <string name="video_file_times">Record files duration</string>
    <string name="tips_recording_time_range">The time range of 15–%d seconds</string>
    <string name="turn_on_video">Enable Record</string>
    <string name="video_time">Record Timer</string>
    <string name="sends">seconds</string>
    <string name="title_audio_setup">Audio Setting</string>
    <string name="input_style">Input Type</string>
    <string name="input_volume">Input Volume</string>
    <string name="output_volume">Output Volume</string>
    <string name="title_video_settings">Video Setting</string>
    <string name="video_setting_first_stream">First stream</string>
    <string name="video_setting_second_stream">Second stream</string>
    <string name="video_setting_code_rate">Bit rate</string>
    <string name="video_setting_frame_rate">Frame rate</string>
    <string name="video_setting_video_level">Image quality</string>
    <string name="video_setting_btm_tips">The smaller value, the better image quality, larger flow control</string>
    <string name="video_setting_video_format">Video format</string>
    <string name="wifi_setting_loading">Loading</string>
    <string name="wifi_setting_safety">Enctype:</string>
    <string name="wifi_setting_manager_btn">Wi-Fi manager</string>
    <string name="title_sdcard_setting">SD Card info</string>
    <string name="sd_card_setting_storage_size">Total size</string>
    <string name="sd_card_setting_available_size">Free size</string>
    <string name="sd_card_setting_format_sd_card">Format SD card</string>
    <string name="sd_card_setting_btm_tips">Format command will ERASE all data of SDCard</string>
    <string name="title_equipment_setting">Time Setting</string>
    <string name="equipment_setting_setting_time">Time Setting</string>
    <string name="equipment_setting_synchronization_time">Sync with Phone time</string>
    <string name="equipment_setting_equipment_setting_timezone">Time Zone Settings</string>
    <string name="equipment_setting_equipment_timezone">Device Time Zone</string>
    <string name="equipment_setting_phone_timezone">Phone Time Zone</string>
    <string name="equipment_setting_setting_timezone">Setting TimeZone</string>
    <string name="title_mailbox_settings">Email Setting</string>
    <string name="mailbox_setting_smtp_server">SMTP Server</string>
    <string name="mailbox_setting_port">Server Port</string>
    <string name="mailbox_setting_safety_connection">Encrypt Type</string>
    <string name="mailbox_setting_verification">Authentication</string>
    <string name="mailbox_setting_username">Username</string>
    <string name="mailbox_setting_password">Password</string>
    <string name="mailbox_setting_receive_address">Send To</string>
    <string name="mailbox_setting_sending_address">Sender</string>
    <string name="mailbox_setting_theme">Subject</string>
    <string name="mailbox_setting_message">Message</string>
    <string name="mailbox_setting_test_email">Test Email Setting</string>
    <string name="mailbox_setting_test">Test</string>
    <string name="title_ftp_settings">FTP Setting</string>
    <string name="ftp_setting_server">Server Address</string>
    <string name="ftp_setting_port">Server Port</string>
    <string name="ftp_setting_username">User Name</string>
    <string name="ftp_setting_password">Password</string>
    <string name="ftp_setting_passive_mode">Passive mode</string>
    <string name="ftp_setting_path">Path</string>
    <string name="ftp_setting_test_ftp">Test FTP settings</string>
    <string name="title_system_settings">System Setting</string>
    <string name="system_setting_restart_camera">Reboot camera</string>
    <string name="system_setting_restore_factory_settings">Reset Camera</string>
    <string name="system_setting_upgrade_online_settings">Check for updates</string>
    <string name="title_equipment_information">Device Information</string>
    <string name="device_info_device_name">Device ID:</string>
    <string name="device_info_network_state">Network:</string>
    <string name="device_info_user_connections">Current Users:</string>
    <string name="device_info_software_version">Software Version:</string>
    <string name="device_info_ip_address">IP Address:</string>
    <string name="device_info_subnet_mask">Subnet Mask:</string>
    <string name="device_info_gateway">Gateway:</string>
    <string name="device_info_dns">DNS:</string>
    <string name="tips_format_sd_card">Format command will ERASE all data of SDCard,Continue?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="tips_reboot_camera">Are you sure to reboot camera?</string>
    <string name="tips_restore_factory_settings">Setup data will be initialized.Are you sure to reset?</string>
    <string name="tips_frame_rate_range">Maximum frame rate range is 1–%d</string>
    <string name="first_tips_code_rate_range">Maximum rate range is 32–6144</string>
    <string name="second_tips_code_rate_range">Maximum rate range is 32–2048</string>
    <string name="tips_video_level_range">video coding level range is 1–6</string>
    <string name="title_wifi_setting">WIFI Setting</string>
    <string name="wifi_setting_signal_intensity">Signal:</string>
    <string name="wifi_setting_connect">Connect</string>
    <string name="wifi_setting_not_connect">Unconnected</string>
    <string name="wifi_setting_connected">Connected</string>
    <string name="mailbox_setting_save_success">Mailbox settings saved successfully</string>
    <string name="mailbox_setting_save_failed">Mailbox settings saved failed</string>
    <string name="ftp_setting_save_success">FTP settings saved successfully</string>
    <string name="ftp_setting_save_failed">FTP settings saved failed</string>
    <string name="alarm_action_save_failed">Alarm settings saved failed</string>
    <string name="alarm_action_save_success">Alarm settings saved successfully</string>
    <string name="mailbox_setting_check_success">Test Success</string>
    <string name="mailbox_setting_check_failed">Test Failed</string>
    <string name="title_scan_qr_code">Scanning QR Code</string>
    <string name="about_fragment_SDK_version">SDK_version:</string>
    <string name="live_view_light_normal">Normal</string>
    <string name="live_view_light_color">Color</string>
    <string name="live_view_light_auto">Auto</string>
    <string name="live_view_light_open">Open</string>
    <string name="live_view_light_close">Close</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>